<resources>
    <string name="app_name">PetTracker</string>
    <string name="app_logo" />
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar  Sesión</string>
    <string name="no_member">¿Aun no eres miembro?</string>
    <string name="register">Registrarse</string>
    <string name="tipo_de_cuenta_titulo">Tipo de Cuenta</string>
    <string name="opcion_dueno_tipo_cuenta">Dueño</string>
    <string name="opcion_paseador_tipo_cuenta">Paseador</string>
    <string name="btn_paseos">Paseos</string>
    <string name="btn_historial">Historial</string>
    <string name="btn_ajustes">Ajustes</string>
    <string name="ingresar_precio">Hora</string>
    <string name="ingresar_duracion_paseo">Duracion paseo</string>
    <string name="btn_solicitar_paseo">Solicitar Paseo</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="paseador_mascotas">Mascotas: Golden Retriver, Gran Danes</string>
    <string name="localizacion_paseador_pagina_paseo">Localización: Calle 100</string>
    <string name="nombre_paseador">Juan Esteban Muñoz</string>
    <string name="estado_pagina_paseo">En paseo...</string>
    <string name="btn_buscar_mascota">Ir por mi mascota</string>
    <string name="nueva_contrasena">Nueva contraseña</string>
    <string name="confirmar_contrasena">Confirme la contraseña</string>
    <string name="btn_confirmar_nueva_contrasena">Confirmar</string>
    <string name="titulo_informacion_perfil_paseador">Información</string>
    <string name="titulo_experiencia_perfil_paseador">Experiencia</string>
    <string name="profesion_paseador">Estudiante de veterinaria</string>
    <string name="actividades_paseador">Voluntario de la veterinaria San Jose</string>
    <string name="experiencia_paseador">Paseador de PetTracker por 2 años</string>
    <string name="titulo_calificaciones_perfil_paseador">Calificaciones</string>
    <string name="titulo_comentarios_perfil_paseador">Comentarios</string>
    <string name="comentarios_perfil_paseador">No parece haber nada por aqui...</string>
    <string name="nombre_registro">Nombre</string>
    <string name="email_registro">Email</string>
    <string name="contrasena_registro">Contraseña</string>
    <string name="numero_mascotas_registro">Número de mascotas</string>
    <string name="btn_registrarse">Registrarse</string>
    <string name="titulo_registro">REGISTRO</string>
    <string name="nombre_de_la_mascota_registro">Nombre de la mascota</string>
    <string name="especie_registro">Especie</string>
    <string name="raza_registro">Raza</string>
    <string name="agrega_una_foto_registro">Agrega una foto</string>
    <string name="btn_siguiente">Siguiente</string>
    <string name="titulo_registro_de_mascotas">REGISTRO DE MASCOTAS</string>
    <string name="experiencia_registro">Experiencia</string>
    <string name="titulo_registro_de_paseador">REGISTRO DE PASEADOR</string>
    <string name="btn_perfil">Perfil</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="btn_rechazar">Rechazar</string>
    <string name="duracion_paseo">40 minutos</string>
    <string name="precio_paseo">$40.000 COP</string>
    <string name="distancia_mascota">Distancia: 3Km</string>
    <string name="descripcion">Descripcion</string>
    <string name="continuar">Continuar</string>
    <string name="terminar">Terminar</string>
    <string name="paseos_actuales">Solicitudes Actuales</string>
    <string name="hora_final">Hora final</string>
    <string name="hora_inicial">Hora inicial</string>
    <string name="selecciona_una_mascota">Selecciona una mascota</string>
    <string name="mascotas">Mascotas</string>
    <string name="realizar_solicitud">Realizar solicitud</string>
    <string name="perfil">Perfil</string>

</resources>