<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="56dp"
            android:layout_height="55dp"
            android:layout_marginEnd="18dp"
            android:src="@mipmap/loguito_foreground"
            android:contentDescription="@string/perfil" />

        <Button
            android:id="@+id/buttonOption1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_paseos"
            android:layout_marginEnd="15dp"
            android:textColor="@color/black"
            android:background="@android:color/transparent"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonOption2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_historial"
            android:textColor="@color/black"
            android:layout_marginEnd="15dp"
            android:background="@android:color/transparent"/>

        <Button
            android:id="@+id/buttonOption3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_ajustes"
            android:textColor="@color/black"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/paseos_actuales"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        android:layout_marginTop="15dp"/>

    <!-- Bottom section with buttons and text inputs -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/realizar_solicitud"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:layout_marginTop="12dp">

            <Button
                android:id="@+id/button_options"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/mascotas"
                style="@style/ButtonStyle" />

            <TextView
                android:id="@+id/tv_option"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="12dp"
                android:gravity="center"
                android:text="@string/selecciona_una_mascota" />

        </LinearLayout>

        <EditText
            android:id="@+id/etHoraInicial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="@color/black"
            android:hint="@string/hora_inicial"
            android:layout_marginTop="10dp"
            android:focusable="false"
            android:clickable="true"
            android:autofillHints=""
            android:inputType="" />

        <EditText
            android:id="@+id/etHoraFinal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="@color/black"
            android:hint="@string/hora_final"
            android:layout_marginTop="10dp"
            android:focusable="false"
            android:clickable="true"
            android:autofillHints=""
            android:inputType="" />

        <Button
            android:id="@+id/btn_solicitud_paseo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_solicitar_paseo"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            style="@style/ButtonStyle" />
    </LinearLayout>

</LinearLayout>
