<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="16dp"
    android:textColor="@android:color/black">


    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titulo_registro"
        android:hint="@string/nombre_registro"
        android:inputType="textCapWords"
        android:padding="12dp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etName"
        android:hint="@string/email_registro"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail"
        android:hint="@string/contrasena_registro"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/etNumberPets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:hint="@string/numero_mascotas_registro"
        android:inputType="number"
        android:padding="12dp"
        tools:ignore="TextFields"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continuar"
        android:layout_below="@id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        style="@style/ButtonStyle" />

    <ImageView
        android:id="@+id/icon_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/loguito_principal"
        android:layout_above="@id/titulo_registro"/>

    <TextView
        android:id="@+id/titulo_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="@string/titulo_registro"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black" />

</RelativeLayout>