<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="16dp"
    android:textColor="@android:color/black">

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_registro"
        android:inputType="textCapWords"
        android:padding="12dp"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etName"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail"
        android:hint="@string/contrasena_registro"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/etExperience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:hint="@string/experiencia_registro"
        android:inputType="textMultiLine"
        android:padding="12dp"
        android:textColor="@color/black"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_registrarse"
        android:layout_below="@id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        style="@style/ButtonStyle" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/icon_paseador"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/icn_foto_perfil"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/titulo_registro" />

    <TextView
        android:id="@+id/titulo_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etName"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="@string/titulo_registro_de_paseador"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black" />

</RelativeLayout>