<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:padding="32dp"
    android:textColor="@android:color/black">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_logo"
        android:scaleType="centerCrop"
        android:layout_marginBottom="40dp"
        android:layout_above="@id/email_input"
        android:layout_centerHorizontal="true"
        app:srcCompat="@mipmap/logo_foreground"
        />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:layout_above="@+id/password_input"
        android:inputType="textEmailAddress"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nueva_contrasena"
        android:layout_centerInParent="true"
        android:inputType="textEmailAddress"
        tools:ignore="TextFields" />

    <!-- Password input -->
    <EditText
        android:id="@+id/password_confirmation_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirmar_contrasena"
        android:layout_below="@id/password_input"
        android:layout_marginTop="16dp"
        android:inputType="textPassword" />

    <!-- Login button -->
    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_confirmar_nueva_contrasena"
        android:layout_below="@id/password_confirmation_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

</RelativeLayout>