<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#FFFFFF"
    tools:context=".generalActivities.RegisterPetDataActivity"
    android:textColor="@android:color/black">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_above="@id/titulo_registro"
        android:src="@drawable/icn_labrador" />

    <TextView
        android:id="@+id/titulo_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etPetName"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="@string/titulo_registro_de_mascotas"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etPetName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_de_la_mascota_registro"
        android:layout_centerInParent="true"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/etSpecies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPetName"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/especie_registro"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etBreed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etSpecies"
        android:hint="@string/raza_registro"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="@color/black"/>

    <SeekBar
        android:id="@+id/ageSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="240"
        android:layout_below="@+id/etDescription"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:padding="19dp"
        android:progress="0" />

    <TextView
        android:id="@+id/tvAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@android:color/black"
        android:layout_below="@id/ageSeekBar"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etBreed"
        android:hint="@string/descripcion"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:inputType="textMultiLine"
        android:padding="12dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tvAddImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agrega_una_foto_registro"
        android:textColor="@android:color/black"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_below="@id/ageSeekBar"
        android:layout_marginTop="25dp"
        android:layout_marginStart="90dp"/>

    <ImageButton
        android:id="@+id/addImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:layout_below="@+id/ageSeekBar"
        android:layout_marginStart="235dp"
        android:layout_marginTop="35dp"
        android:background="#6B9BFA" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addImageButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/btn_siguiente"
        style="@style/ButtonStyle" />

</RelativeLayout>
