<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="56dp"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="8dp"
            android:src="@mipmap/loguito_foreground" />

        <Button
            android:id="@+id/buttonOption1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/imageView"
            android:layout_alignBaseline="@id/imageView"
            android:text="@string/btn_paseos"
            android:textColor="@color/black"
            android:background="@android:color/transparent"/>

        <Button
            android:id="@+id/buttonOption2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/buttonOption1"
            android:layout_alignBaseline="@id/buttonOption1"
            android:text="@string/btn_historial"
            android:textColor="@color/black"
            android:background="@android:color/transparent"/>

        <Button
            android:id="@+id/buttonOption3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/buttonOption2"
            android:layout_alignBaseline="@id/buttonOption2"
            android:text="@string/btn_ajustes"
            android:textColor="@color/black"
            android:background="@android:color/transparent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_below="@id/buttonOption2"
            android:layout_marginTop="12dp"/>

    </RelativeLayout>


    <ImageView
        android:id="@+id/imagen_paseo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerLayout"
        app:srcCompat="@drawable/captura_de_pantalla_2024_03_05_220649" />

    <RelativeLayout
        android:id="@+id/relativeLayoutBelowWebView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_below="@id/imagen_paseo"
        android:layout_marginTop="100dp">

        <ImageView
            android:id="@+id/foto_perfil_paseador"
            android:layout_width="125dp"
            android:layout_height="125dp"
            app:srcCompat="@drawable/perfil_hombre_vivo__1_"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            />

        <TextView
            android:id="@+id/nombre_paseador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="142dp"
            android:text="@string/nombre_paseador"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"></TextView>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/pngtree_big_wall_clock_icon_simple_style_png_image_1921191__1__removebg_preview"
            android:layout_below="@id/localizacion_paseo"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="142dp"
            />

        <TextView
            android:id="@+id/mascotas_paseo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paseador_mascotas"
            android:layout_marginLeft="143dp"
            android:layout_below="@id/nombre_paseador"
            ></TextView>

        <TextView
            android:id="@+id/localizacion_paseo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/localizacion_paseador_pagina_paseo"
            android:layout_marginLeft="143dp"
            android:layout_below="@id/mascotas_paseo"
            ></TextView>

        <TextView
            android:id="@+id/tiempo_paseo_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/localizacion_paseo"
            android:layout_marginLeft="189dp"
            android:layout_marginTop="18dp"
            android:text="@string/estado_pagina_paseo"
            android:textColor="@color/gray"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/icono_perro"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/dog_icon"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="80dp"
            android:layout_below="@id/foto_perfil_paseador"/>

        <Button
            android:id="@+id/ir_mascota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_buscar_mascota"
            android:layout_below="@id/foto_perfil_paseador"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="168dp"
            ></Button>

    </RelativeLayout>

</RelativeLayout>
